Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74816

src/client/qwaylanddisplay.cpp:156:30: error: ‘class TestNamespace::QtWaylandClient::QWaylandIntegration’ has no member named ‘destroyScreen’; did you mean ‘destroy’?

XMLWordPrintable

    • Linux/Wayland, Linux/X11
    • ad313595e0662fa2e91676feef65aad5b4525a86

      https://codereview.qt-project.org/#/c/257175/ Update submodules on '5.13' in qt5 - PS1

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1553752125

      https://testresults.qt.io/coin/api/results/qt/qtwayland/13bd46e0a91e2fd8badfee79d65fcecc6a134331/LinuxUbuntu_18_04x86_64LinuxUbuntu_18_04x86_64GCCqtci-linux-Ubuntu-18.04-x86_64-f71ad4DeveloperBuild_OutOfSourceBuild_QtLibInfix_QtNamespace_BuildExamples_Documentation/6c034955649b06128365ebcc26901d94873a3aeb/build_1553752929/log.txt.gz

      agent:2019/03/28 06:18:47 build.go:192: /home/qt/work/qt/qtwayland/src/client/qwaylanddisplay.cpp: In destructor ‘virtual TestNamespace::QtWaylandClient::QWaylandDisplay::~QWaylandDisplay()’:
      agent:2019/03/28 06:18:47 build.go:192: /home/qt/work/qt/qtwayland/src/client/qwaylanddisplay.cpp:156:30: error: ‘class TestNamespace::QtWaylandClient::QWaylandIntegration’ has no member named ‘destroyScreen’; did you mean ‘destroy’?
      agent:2019/03/28 06:18:47 build.go:192:          mWaylandIntegration->destroyScreen(screen);
      agent:2019/03/28 06:18:47 build.go:192:                               ^~~~~~~~~~~~~
      agent:2019/03/28 06:18:47 build.go:192:                               destroy
      agent:2019/03/28 06:18:47 build.go:192: /home/qt/work/qt/qtwayland/src/client/qwaylanddisplay.cpp: In member function ‘virtual void TestNamespace::QtWaylandClient::QWaylandDisplay::registry_global(uint32_t, const TestNamespace::QString&, uint32_t)’:
      agent:2019/03/28 06:18:47 build.go:192: /home/qt/work/qt/qtwayland/src/client/qwaylanddisplay.cpp:247:30: error: ‘class TestNamespace::QtWaylandClient::QWaylandIntegration’ has no member named ‘screenAdded’
      agent:2019/03/28 06:18:47 build.go:192:          mWaylandIntegration->screenAdded(screen);
      agent:2019/03/28 06:18:47 build.go:192:                               ^~~~~~~~~~~
      agent:2019/03/28 06:18:47 build.go:192: /home/qt/work/qt/qtwayland/src/client/qwaylanddisplay.cpp: In member function ‘virtual void TestNamespace::QtWaylandClient::QWaylandDisplay::registry_global_remove(uint32_t)’:
      agent:2019/03/28 06:18:47 build.go:192: /home/qt/work/qt/qtwayland/src/client/qwaylanddisplay.cpp:303:46: error: ‘class TestNamespace::QtWaylandClient::QWaylandIntegration’ has no member named ‘destroyScreen’; did you mean ‘destroy’?
      agent:2019/03/28 06:18:47 build.go:192:                          mWaylandIntegration->destroyScreen(screen);
      agent:2019/03/28 06:18:47 build.go:192:                                               ^~~~~~~~~~~~~
      agent:2019/03/28 06:18:47 build.go:192:                                               destroy
      agent:2019/03/28 06:18:47 build.go:192: Makefile:3536: recipe for target '.obj/qwaylanddisplay.o' failed
      agent:2019/03/28 06:18:47 build.go:192: make[2]: *** [.obj/qwaylanddisplay.o] Error 1
      agent:2019/03/28 06:18:47 build.go:192: make[2]: *** Waiting for unfinished jobs....
      

        For Gerrit Dashboard: QTBUG-74816
        # Subject Branch Project Status CR V

            liaqi Liang Qi
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: