Fix build - screen maintenance functions moved to QWSI

This is an ammendment to 01e1df90a7debd333314720fdd5cf6cd9964d796 in
qtbase.

Stop using screenAdded/destroyScreen deprecated functions.

Task-number: QTBUG-74816
Change-Id: I6ce96e5dcd74e83560800de571d9530e4305e9ad
Reviewed-by: Liang Qi <liang.qi@qt.io>